01-node-mysql-nginx/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  labels:
    app: my-webapp
spec:
  containers:
    - name: node-nginx
      image: uday0710/nginx-pm2-node:01
      volumeMounts:
        - mountPath: "/var/www/html"
          name: nginx-root-files
    - name: mysql
      image: mysql:latest
  volumes:
    - name: nginx-root-files
      persistentVolumeClaim:
        claimName: webapp-pvc
