01-node-mysql-nginx/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:   
  name: webapp-statefulset
spec:
  serviceName: database
  replicas: 2
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database-mysql
          image: mysql:latest
          volumeClaimTemplates:
            - metadata:
                name: database-pvc
              spec:
                accessModes: [ "ReadWriteOnce" ]
                resources:
                  requests:
                    storage: 1Gi
